# bamstorm

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  benchmark_v0.3.0.csv  pyproject.toml
bench/: bench.py  bench.toml  bench_history.py  plot_report.py  run_bench.sh
dnanexus/: build.sh  dxapp.json  run_sweep.sh
dnanexus/src/: code.sh
docs/: bam-tools-comparison.md  bam-tools-comparison.zh.md  benchmark_v0.3.0.csv
examples/: deidentify.rs
python/bamstorm/: pysam.py
python/bamstrom/: __init__.py  pysam.py
src/: bai_parser.rs  bam_parser.rs  lib.rs  main.rs  python.rs  timer.rs
