[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bamstrom"
requires-python = ">=3.8"
description = "Fast parallel BAM reader with Python bindings"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "bamstrom._core"
