[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bamstrom"
version = "0.1.0"
requires-python = ">=3.8"
description = "Fast parallel BAM reader with Python bindings"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "bamstrom._core"

[dependency-groups]
dev = [
    "maturin>=1.13.3",
]
